:wrench: fix: Routes adjustments
